# blink

./: .mxproject  CMakeLists.txt  blink.ioc
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: gpio.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c
