cmake_minimum_required(VERSION 3.21)
project(blink C)

set(CMAKE_C_STANDARD 11)

include_directories(Core/Inc)
include_directories(Drivers/CMSIS/Core/Include)
include_directories(Drivers/CMSIS/Core_A/Include)
include_directories(Drivers/CMSIS/Device)
include_directories(Drivers/CMSIS/Device/ST)
include_directories(Drivers/CMSIS/Device/ST/STM32F4xx)
include_directories(Drivers/CMSIS/Device/ST/STM32F4xx/Include)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/basic_math_tests)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/complex_math_tests)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/controller_tests)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/fast_math_tests)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/filtering_tests)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/intrinsics_tests)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/matrix_tests)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/statistics_tests)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/support_tests)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/templates)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/transform_tests)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/arr_desc)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/opt_arg)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/util)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/inc)
include_directories(Drivers/CMSIS/DSP/Examples/ARM/arm_convolution_example)
include_directories(Drivers/CMSIS/DSP/Examples/ARM/arm_fir_example)
include_directories(Drivers/CMSIS/DSP/Examples/ARM/arm_graphic_equalizer_example)
include_directories(Drivers/CMSIS/DSP/Examples/ARM/arm_linear_interp_example)
include_directories(Drivers/CMSIS/DSP/Examples/ARM/arm_matrix_example)
include_directories(Drivers/CMSIS/DSP/Examples/ARM/arm_signal_converge_example)
include_directories(Drivers/CMSIS/DSP/Include)

add_executable(blink
        Core/Inc/gpio.h
        Core/Inc/main.h
        Core/Inc/stm32f4xx_hal_conf.h
        Core/Inc/stm32f4xx_it.h
        Core/Inc/tim.h
        Core/Src/gpio.c
        Core/Src/main.c
        Core/Src/stm32f4xx_hal_msp.c
        Core/Src/stm32f4xx_it.c
        Core/Src/system_stm32f4xx.c
        Core/Src/tim.c
        Drivers/CMSIS/Core/Include/cmsis_armcc.h
        Drivers/CMSIS/Core/Include/cmsis_armclang.h
        Drivers/CMSIS/Core/Include/cmsis_compiler.h
        Drivers/CMSIS/Core/Include/cmsis_gcc.h
        Drivers/CMSIS/Core/Include/cmsis_iccarm.h
        Drivers/CMSIS/Core/Include/cmsis_version.h
        Drivers/CMSIS/Core/Include/core_armv8mbl.h
        Drivers/CMSIS/Core/Include/core_armv8mml.h
        Drivers/CMSIS/Core/Include/core_cm0.h
        Drivers/CMSIS/Core/Include/core_cm0plus.h
        Drivers/CMSIS/Core/Include/core_cm1.h
        Drivers/CMSIS/Core/Include/core_cm23.h
        Drivers/CMSIS/Core/Include/core_cm3.h
        Drivers/CMSIS/Core/Include/core_cm33.h
        Drivers/CMSIS/Core/Include/core_cm4.h
        Drivers/CMSIS/Core/Include/core_cm7.h
        Drivers/CMSIS/Core/Include/core_sc000.h
        Drivers/CMSIS/Core/Include/core_sc300.h
        Drivers/CMSIS/Core/Include/mpu_armv7.h
        Drivers/CMSIS/Core/Include/mpu_armv8.h
        Drivers/CMSIS/Core/Include/tz_context.h
        Drivers/CMSIS/Core/Template/ARMv8-M/main_s.c
        Drivers/CMSIS/Core/Template/ARMv8-M/tz_context.c
        Drivers/CMSIS/Core_A/Include/cmsis_armcc.h
        Drivers/CMSIS/Core_A/Include/cmsis_armclang.h
        Drivers/CMSIS/Core_A/Include/cmsis_compiler.h
        Drivers/CMSIS/Core_A/Include/cmsis_cp15.h
        Drivers/CMSIS/Core_A/Include/cmsis_gcc.h
        Drivers/CMSIS/Core_A/Include/cmsis_iccarm.h
        Drivers/CMSIS/Core_A/Include/core_ca.h
        Drivers/CMSIS/Core_A/Include/irq_ctrl.h
        Drivers/CMSIS/Core_A/Source/irq_ctrl_gic.c
        Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f401xe.h
        Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
        Drivers/CMSIS/Device/ST/STM32F4xx/Include/system_stm32f4xx.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/basic_math_tests/basic_math_templates.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/basic_math_tests/basic_math_test_data.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/basic_math_tests/basic_math_test_group.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/basic_math_tests/basic_math_tests.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/complex_math_tests/complex_math_templates.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/complex_math_tests/complex_math_test_data.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/complex_math_tests/complex_math_test_group.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/complex_math_tests/complex_math_tests.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/controller_tests/controller_templates.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/controller_tests/controller_test_data.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/controller_tests/controller_test_group.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/controller_tests/controller_tests.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/fast_math_tests/fast_math_templates.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/fast_math_tests/fast_math_test_data.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/fast_math_tests/fast_math_test_group.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/filtering_tests/filtering_templates.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/filtering_tests/filtering_test_data.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/filtering_tests/filtering_test_group.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/filtering_tests/filtering_tests.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/intrinsics_tests/intrinsics_templates.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/intrinsics_tests/intrinsics_test_data.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/intrinsics_tests/intrinsics_test_group.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/matrix_tests/matrix_templates.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/matrix_tests/matrix_test_data.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/matrix_tests/matrix_test_group.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/matrix_tests/matrix_tests.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/statistics_tests/statistics_templates.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/statistics_tests/statistics_test_data.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/statistics_tests/statistics_test_group.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/statistics_tests/statistics_tests.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/support_tests/support_templates.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/support_tests/support_test_data.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/support_tests/support_test_group.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/support_tests/support_tests.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/templates/template.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/templates/test_templates.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/transform_tests/transform_templates.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/transform_tests/transform_test_data.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/transform_tests/transform_test_group.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/transform_tests/transform_tests.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/all_tests.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/math_helper.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/type_abbrev.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/arr_desc/arr_desc.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/opt_arg/opt_arg.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/opt_arg/pp_narg.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/opt_arg/splice.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/util/util.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/jtest.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/jtest_cycle.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/jtest_define.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/jtest_fw.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/jtest_group.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/jtest_group_call.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/jtest_group_define.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/jtest_pf.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/jtest_systick.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/jtest_test.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/jtest_test_call.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/jtest_test_define.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/jtest_test_ret.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/jtest_util.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/src/jtest_cycle.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/src/jtest_dump_str_segments.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/src/jtest_fw.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/src/jtest_trigger_action.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/platform/ARMCC/Retarget.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/platform/GCC/Retarget.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/platform/system_ARMCM0.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/platform/system_ARMCM23.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/platform/system_ARMCM3.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/platform/system_ARMCM33.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/platform/system_ARMCM4.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/platform/system_ARMCM7.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/platform/system_ARMSC000.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/platform/system_ARMSC300.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/platform/system_ARMv8MBL.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/platform/system_ARMv8MML.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/platform/system_generic.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/basic_math_tests/abs_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/basic_math_tests/add_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/basic_math_tests/basic_math_test_common_data.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/basic_math_tests/basic_math_test_group.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/basic_math_tests/dot_prod_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/basic_math_tests/mult_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/basic_math_tests/negate_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/basic_math_tests/offset_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/basic_math_tests/scale_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/basic_math_tests/shift_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/basic_math_tests/sub_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/complex_math_tests/cmplx_conj_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/complex_math_tests/cmplx_dot_prod_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/complex_math_tests/cmplx_mag_squared_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/complex_math_tests/cmplx_mag_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/complex_math_tests/cmplx_mult_cmplx_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/complex_math_tests/cmplx_mult_real_test.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/complex_math_tests/complex_math_test_common_data.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/complex_math_tests/complex_math_test_group.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/controller_tests/controller_test_common_data.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/controller_tests/controller_test_group.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/controller_tests/pid_reset_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/controller_tests/pid_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/controller_tests/sin_cos_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/fast_math_tests/fast_math_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/fast_math_tests/fast_math_tests_common_data.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/filtering_tests/biquad_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/filtering_tests/conv_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/filtering_tests/correlate_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/filtering_tests/filtering_test_common_data.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/filtering_tests/filtering_test_group.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/filtering_tests/fir_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/filtering_tests/iir_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/filtering_tests/lms_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/intrinsics_tests/intrinsics_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/intrinsics_tests/intrinsics_tests_common_data.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/matrix_tests/mat_add_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/matrix_tests/mat_cmplx_mult_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/matrix_tests/mat_init_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/matrix_tests/mat_inverse_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/matrix_tests/mat_mult_fast_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/matrix_tests/mat_mult_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/matrix_tests/mat_scale_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/matrix_tests/mat_sub_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/matrix_tests/mat_trans_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/matrix_tests/matrix_test_common_data.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/matrix_tests/matrix_test_group.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/statistics_tests/max_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/statistics_tests/mean_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/statistics_tests/min_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/statistics_tests/power_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/statistics_tests/rms_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/statistics_tests/statistics_test_common_data.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/statistics_tests/statistics_test_group.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/statistics_tests/std_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/statistics_tests/var_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/support_tests/copy_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/support_tests/fill_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/support_tests/support_test_common_data.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/support_tests/support_test_group.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/support_tests/x_to_y_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/transform_tests/cfft_family_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/transform_tests/cfft_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/transform_tests/dct4_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/transform_tests/rfft_fast_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/transform_tests/rfft_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/transform_tests/transform_test_group.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/transform_tests/transform_tests_common_data.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/all_tests.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/main.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/src/math_helper.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/inc/ref.h
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/BasicMathFunctions/abs.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/BasicMathFunctions/add.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/BasicMathFunctions/dot_prod.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/BasicMathFunctions/mult.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/BasicMathFunctions/negate.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/BasicMathFunctions/offset.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/BasicMathFunctions/scale.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/BasicMathFunctions/shift.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/BasicMathFunctions/sub.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/ComplexMathFunctions/cmplx_conj.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/ComplexMathFunctions/cmplx_dot_prod.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/ComplexMathFunctions/cmplx_mag.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/ComplexMathFunctions/cmplx_mag_squared.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/ComplexMathFunctions/cmplx_mult_cmplx.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/ComplexMathFunctions/cmplx_mult_real.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/ControllerFunctions/pid.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/ControllerFunctions/sin_cos.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/FastMathFunctions/cos.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/FastMathFunctions/sin.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/FastMathFunctions/sqrt.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/FilteringFunctions/biquad.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/FilteringFunctions/conv.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/FilteringFunctions/correlate.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/FilteringFunctions/fir.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/FilteringFunctions/fir_decimate.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/FilteringFunctions/fir_interpolate.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/FilteringFunctions/fir_lattice.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/FilteringFunctions/fir_sparse.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/FilteringFunctions/iir_lattice.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/FilteringFunctions/lms.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/HelperFunctions/mat_helper.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/HelperFunctions/ref_helper.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/Intrinsics/intrinsics.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/MatrixFunctions/mat_add.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/MatrixFunctions/mat_cmplx_mult.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/MatrixFunctions/mat_inverse.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/MatrixFunctions/mat_mult.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/MatrixFunctions/mat_scale.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/MatrixFunctions/mat_sub.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/MatrixFunctions/mat_trans.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/StatisticsFunctions/max.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/StatisticsFunctions/mean.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/StatisticsFunctions/min.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/StatisticsFunctions/power.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/StatisticsFunctions/rms.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/StatisticsFunctions/std.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/StatisticsFunctions/var.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/SupportFunctions/copy.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/SupportFunctions/fill.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/SupportFunctions/fixed_to_fixed.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/SupportFunctions/fixed_to_float.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/SupportFunctions/float_to_fixed.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/TransformFunctions/bitreversal.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/TransformFunctions/cfft.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/TransformFunctions/dct4.c
        Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/src/TransformFunctions/rfft.c
        Drivers/CMSIS/DSP/Examples/ARM/arm_class_marks_example/arm_class_marks_example_f32.c
        Drivers/CMSIS/DSP/Examples/ARM/arm_convolution_example/arm_convolution_example_f32.c
        Drivers/CMSIS/DSP/Examples/ARM/arm_convolution_example/math_helper.c
        Drivers/CMSIS/DSP/Examples/ARM/arm_convolution_example/math_helper.h
        Drivers/CMSIS/DSP/Examples/ARM/arm_dotproduct_example/arm_dotproduct_example_f32.c
        Drivers/CMSIS/DSP/Examples/ARM/arm_fft_bin_example/arm_fft_bin_data.c
        Drivers/CMSIS/DSP/Examples/ARM/arm_fft_bin_example/arm_fft_bin_example_f32.c
        Drivers/CMSIS/DSP/Examples/ARM/arm_fir_example/arm_fir_data.c
        Drivers/CMSIS/DSP/Examples/ARM/arm_fir_example/arm_fir_example_f32.c
        Drivers/CMSIS/DSP/Examples/ARM/arm_fir_example/math_helper.c
        Drivers/CMSIS/DSP/Examples/ARM/arm_fir_example/math_helper.h
        Drivers/CMSIS/DSP/Examples/ARM/arm_graphic_equalizer_example/arm_graphic_equalizer_data.c
        Drivers/CMSIS/DSP/Examples/ARM/arm_graphic_equalizer_example/arm_graphic_equalizer_example_q31.c
        Drivers/CMSIS/DSP/Examples/ARM/arm_graphic_equalizer_example/math_helper.c
        Drivers/CMSIS/DSP/Examples/ARM/arm_graphic_equalizer_example/math_helper.h
        Drivers/CMSIS/DSP/Examples/ARM/arm_linear_interp_example/arm_linear_interp_data.c
        Drivers/CMSIS/DSP/Examples/ARM/arm_linear_interp_example/arm_linear_interp_example_f32.c
        Drivers/CMSIS/DSP/Examples/ARM/arm_linear_interp_example/math_helper.c
        Drivers/CMSIS/DSP/Examples/ARM/arm_linear_interp_example/math_helper.h
        Drivers/CMSIS/DSP/Examples/ARM/arm_matrix_example/arm_matrix_example_f32.c
        Drivers/CMSIS/DSP/Examples/ARM/arm_matrix_example/math_helper.c
        Drivers/CMSIS/DSP/Examples/ARM/arm_matrix_example/math_helper.h
        Drivers/CMSIS/DSP/Examples/ARM/arm_signal_converge_example/arm_signal_converge_data.c
        Drivers/CMSIS/DSP/Examples/ARM/arm_signal_converge_example/arm_signal_converge_example_f32.c
        Drivers/CMSIS/DSP/Examples/ARM/arm_signal_converge_example/math_helper.c
        Drivers/CMSIS/DSP/Examples/ARM/arm_signal_converge_example/math_helper.h
        Drivers/CMSIS/DSP/Examples/ARM/arm_sin_cos_example/arm_sin_cos_example_f32.c
        Drivers/CMSIS/DSP/Examples/ARM/arm_variance_example/arm_variance_example_f32.c
        Drivers/CMSIS/DSP/Include/arm_common_tables.h
        Drivers/CMSIS/DSP/Include/arm_const_structs.h
        Drivers/CMSIS/DSP/Include/arm_math.h
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_abs_f32.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_abs_q15.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_abs_q31.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_abs_q7.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_add_f32.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_add_q15.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_add_q31.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_add_q7.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_dot_prod_f32.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_dot_prod_q15.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_dot_prod_q31.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_dot_prod_q7.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_mult_f32.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_mult_q15.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_mult_q31.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_mult_q7.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_negate_f32.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_negate_q15.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_negate_q31.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_negate_q7.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_offset_f32.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_offset_q15.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_offset_q31.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_offset_q7.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_scale_f32.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_scale_q15.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_scale_q31.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_scale_q7.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_shift_q15.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_shift_q31.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_shift_q7.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_sub_f32.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_sub_q15.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_sub_q31.c
        Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_sub_q7.c
        Drivers/CMSIS/DSP/Source/CommonTables/arm_common_tables.c
        Drivers/CMSIS/DSP/Source/CommonTables/arm_const_structs.c
        Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_conj_f32.c
        Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_conj_q15.c
        Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_conj_q31.c
        Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_dot_prod_f32.c
        Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_dot_prod_q15.c
        Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_dot_prod_q31.c
        Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mag_f32.c
        Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mag_q15.c
        Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mag_q31.c
        Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mag_squared_f32.c
        Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mag_squared_q15.c
        Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mag_squared_q31.c
        Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mult_cmplx_f32.c
        Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mult_cmplx_q15.c
        Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mult_cmplx_q31.c
        Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mult_real_f32.c
        Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mult_real_q15.c
        Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mult_real_q31.c
        Drivers/CMSIS/DSP/Source/ControllerFunctions/arm_pid_init_f32.c
        Drivers/CMSIS/DSP/Source/ControllerFunctions/arm_pid_init_q15.c
        Drivers/CMSIS/DSP/Source/ControllerFunctions/arm_pid_init_q31.c
        Drivers/CMSIS/DSP/Source/ControllerFunctions/arm_pid_reset_f32.c
        Drivers/CMSIS/DSP/Source/ControllerFunctions/arm_pid_reset_q15.c
        Drivers/CMSIS/DSP/Source/ControllerFunctions/arm_pid_reset_q31.c
        Drivers/CMSIS/DSP/Source/ControllerFunctions/arm_sin_cos_f32.c
        Drivers/CMSIS/DSP/Source/ControllerFunctions/arm_sin_cos_q31.c
        Drivers/CMSIS/DSP/Source/FastMathFunctions/arm_cos_f32.c
        Drivers/CMSIS/DSP/Source/FastMathFunctions/arm_cos_q15.c
        Drivers/CMSIS/DSP/Source/FastMathFunctions/arm_cos_q31.c
        Drivers/CMSIS/DSP/Source/FastMathFunctions/arm_sin_f32.c
        Drivers/CMSIS/DSP/Source/FastMathFunctions/arm_sin_q15.c
        Drivers/CMSIS/DSP/Source/FastMathFunctions/arm_sin_q31.c
        Drivers/CMSIS/DSP/Source/FastMathFunctions/arm_sqrt_q15.c
        Drivers/CMSIS/DSP/Source/FastMathFunctions/arm_sqrt_q31.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df1_32x64_init_q31.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df1_32x64_q31.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df1_f32.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df1_fast_q15.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df1_fast_q31.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df1_init_f32.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df1_init_q15.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df1_init_q31.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df1_q15.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df1_q31.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df2T_f32.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df2T_f64.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df2T_init_f32.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df2T_init_f64.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_stereo_df2T_f32.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_stereo_df2T_init_f32.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_f32.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_fast_opt_q15.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_fast_q15.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_fast_q31.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_opt_q15.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_opt_q7.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_partial_f32.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_partial_fast_opt_q15.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_partial_fast_q15.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_partial_fast_q31.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_partial_opt_q15.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_partial_opt_q7.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_partial_q15.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_partial_q31.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_partial_q7.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_q15.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_q31.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_q7.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_correlate_f32.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_correlate_fast_opt_q15.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_correlate_fast_q15.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_correlate_fast_q31.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_correlate_opt_q15.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_correlate_opt_q7.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_correlate_q15.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_correlate_q31.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_correlate_q7.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_decimate_f32.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_decimate_fast_q15.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_decimate_fast_q31.c
        Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_decimate_init_f32.c)
